--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: <Your Name Here> # your name (or website title) here
-logo: "/images/joker_logo.jpg?raw=true" # your photo (or logo) here
+title: <Sirri Neba Nforsoh> # your name (or website title) here
+logo: "/images/sirri.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Graduate Student in... 
+  Graduate Student in the univeristy of rhode island... 
   <br><br>
-  Department of ...
+  Department of civil and environmental engineering...
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/feed/?trk=onboarding-landing">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
