--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: <Sirri Neba Nforsoh> # your name (or website title) here
-logo: "/images/sirri.jpg?raw=true" # your photo (or logo) here
+title: Sirri Neba Nforsoh # your name (or website title) here
+logo: "/images/Sirri.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Graduate Student in the univeristy of rhode island... 
   <br><br>
